some mistake fixed